--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootswatch": "^5.1.3",
+    "mongoose": "^6.1.4",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
