--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "bootswatch": "^5.1.3",
+    "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "next": "12.0.7",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
