--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootswatch": "^5.1.3",
+    "link-preview-js": "^2.1.8",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "next": "12.0.7",
