--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dhaiwat10/react-link-preview": "^1.12.2",
     "bootswatch": "^5.1.3",
-    "link-preview-js": "^2.1.8",
+    "http-link-preview": "^0.4.4",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "next": "12.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-tiny-link": "^3.6.1"
+    "react-tiny-link": "^3.6.1",
+    "xtal-link-preview": "^0.0.60"
   },
   "devDependencies": {
     "eslint": "8.5.0",
