--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
