--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "next": "12.0.7",
+    "next-redux-wrapper": "^7.0.5",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-calendar": "^3.5.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "8.5.0",
