--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@dhaiwat10/react-link-preview": "^1.12.2",
     "bootswatch": "^5.1.3",
+    "masonry-layout": "^4.2.2",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "next": "12.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "eslint": "8.5.0",
